# Python-OC-Lettings-FR

./: .coverage  .gitignore  Dockerfile  oc-lettings-site.sqlite3  pyproject.toml  setup.cfg
lettings/: models.py  urls.py  views.py
lettings/migrations/: 0001_initial.py
oc_lettings_site/: settings.py  urls.py  views.py
oc_lettings_site/migrations/: 0002_remove_letting_address_alter_profile_id_and_more.py  0003_delete_profile.py
profiles/: models.py  urls.py  views.py
profiles/migrations/: 0001_initial.py
templates/: 404.html  500.html
tests/lettings/: test_integration_lettings.py  test_unit_lettings.py
tests/lettings/unit_tests/: test_models.py  test_urls.py  test_views.py
tests/oc_lettings_sites/: test_unit_oc_lettings_sites.py
tests/profiles/: test_integration_profiles.py  test_unit_profiles.py
