[project]
name = "python-oc-lettings-fr"
version = "0.1.0"
description = ""
authors = [
    {name = "meridien22",email = "meridien.sig@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.4,<7.0.0)",
    "sentry-sdk (>=2.59.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)",
    "coverage (>=7.13.5,<8.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]

[tool.coverage.run]
source = ["."]
omit = ["*test*", "*migrations*", "manage.py", "setup.py", "wsgi.py", "asgi.py"]
